# Polymino

./: .travis.yml  CMakeLists.txt  README.md  Tests.md  appveyor.yml  Отчёт(практика).docx  Отчёт(теория)  Отчёт(теория).docx
Header files/: Coordinates.hpp  Errors.hpp  Figures.hpp  Substring.hpp
Project/Source files/: Condition.hpp  Coordinates.hpp  Data.hpp  Figures.hpp  FiguresVariant.hpp
Source files/: Condition.cpp  Coordinates.cpp  Data.cpp  Errors.cpp  Figures.cpp  FiguresVariant.cpp  Substring.cpp  main.cpp
Tests/: 001.ans  002.ans  003.ans  004.ans  005.ans  006.ans
